--- a/microsite/views/indore_microsite.xml
+++ b/microsite/views/indore_microsite.xml
@@ -41,39 +41,46 @@
                   <div class="col-md-6">
                     <div class="mb-3">
                       <div class="text-secondary small fw-semibold">Owner Name</div>
-                      <div class="fw-bold text-uppercase h5 mb-0"><t t-out="property.owner_name"/></div>
+                      <div class="fw-bold text-uppercase h5 mb-0">
+                        <t t-if="property.owner_name"><t t-out="property.owner_name"/></t>
+                      </div>
                     </div>
                   </div>
                  
                   <div class="col-md-6">
                     <div class="mb-3">
                       <div class="text-secondary small fw-semibold">Digital Door Number</div>
-                      <div class="fw-bold h5 mb-0"><t t-out="property.upic_no"/></div>
+                      <div class="fw-bold h5 mb-0">
+                        <t t-if="property.upic_no"><t t-out="property.upic_no"/></t>
+                      </div>
                     </div>
                   </div>
 
                   <div class="col-md-6">
                     <div class="mb-3">
                       <div class="text-secondary small fw-semibold">Zone</div>
-                      <div class="fw-bold h5 mb-0"><t t-out="property.zone_no.name"/></div>
+                      <div class="fw-bold h5 mb-0">
+                        <t t-if="property.zone_no and property.zone_no.name"><t t-out="property.zone_no.name"/></t>
+                      </div>
                     </div>
                   </div>
 
                   <div class="col-md-6">
                     <div class="mb-3">
                       <div class="text-secondary small fw-semibold">Ward</div>
-                      <div class="fw-bold h5 mb-0"><t t-out="property.ward_no.name"/></div>
+                      <div class="fw-bold h5 mb-0">
+                        <t t-if="property.ward_no and property.ward_no.name"><t t-out="property.ward_no.name"/></t>
+                      </div>
                     </div>
                   </div>
-
 
                   <div class="col-md-6">
                     <div class="mb-3">
                       <div class="text-secondary small fw-semibold">Colony</div>
                       <div class="fw-bold h5 mb-0">
-                      <t t-if="property.colony_id.name">
-                        <t t-out="property.colony_id.name"/>
-                      </t>
+                        <t t-if="property.colony_id and property.colony_id.name">
+                          <t t-out="property.colony_id.name"/>
+                        </t>
                       </div>
                     </div>
                   </div>
@@ -81,7 +88,13 @@
                   <div class="col-md-6">
                     <div class="mb-3">
                       <div class="text-secondary small fw-semibold">Latitude &amp; Longitude</div>
-                      <div class="fw-bold h5 mb-0"><t t-out="property.survey_line_ids[0].latitude"/> &amp; <t t-out="property.survey_line_ids[0].longitude"/></div>
+                      <div class="fw-bold h5 mb-0">
+                        <t t-if="property.survey_line_ids and property.survey_line_ids[0]">
+                          <t t-if="property.survey_line_ids[0].latitude and property.survey_line_ids[0].longitude">
+                            <t t-out="property.survey_line_ids[0].latitude"/> &amp; <t t-out="property.survey_line_ids[0].longitude"/>
+                          </t>
+                        </t>
+                      </div>
                     </div>
                   </div>
 
@@ -95,30 +108,29 @@
                     <div class="mb-3">
                       <div class="text-secondary small fw-semibold">Address</div>
                       <div class="fw-bold h5 mb-0 text-uppercase">
-                      <t t-if="property.survey_line_ids[0].address_line_1">
-                        <t t-out="property.survey_line_ids[0].address_line_1"/>,
-                      </t>
-                      <t t-if="property.survey_line_ids[0].address_line_2">
-                        <t t-out="property.survey_line_ids[0].address_line_2"/>,
-                      </t>
-                      <!-- <t t-if="property.survey_line_ids[0].colony_name">
-                        <t t-out="property.survey_line_ids[0].colony_name"/>,
-                      </t> -->
+                        <t t-if="property.survey_line_ids and property.survey_line_ids[0]">
+                          <t t-if="property.survey_line_ids[0].address_line_1">
+                            <t t-out="property.survey_line_ids[0].address_line_1"/>,
+                          </t>
+                          <t t-if="property.survey_line_ids[0].address_line_2">
+                            <t t-out="property.survey_line_ids[0].address_line_2"/>,
+                          </t>
+                        </t>
                       </div>
                     </div>
                   </div>
                 </div>
-                                <!-- Property Buttons -->
+                <!-- Property Buttons -->
                 <div class="d-flex justify-content-between gap-3 mt-4">
                   <div class="flex-grow-1">
-                    <img t-if="property.survey_line_ids[0].property_image" 
+                    <img t-if="property.survey_line_ids and property.survey_line_ids[0] and property.survey_line_ids[0].property_image" 
                          t-att-src="image_data_uri(property.survey_line_ids[0].property_image)" 
                          class="img-fluid rounded shadow-sm" 
                          alt="Property 1"
                          style="width: 100%; height: 200px; object-fit: cover;"/>
                   </div>
                   <div class="flex-grow-1">
-                    <img t-if="property.survey_line_ids[0].property_image1" 
+                    <img t-if="property.survey_line_ids and property.survey_line_ids[0] and property.survey_line_ids[0].property_image1" 
                          t-att-src="image_data_uri(property.survey_line_ids[0].property_image1)" 
                          class="img-fluid rounded shadow-sm" 
                          alt="Property 2"
