--- a/bharat_ddn/views/menuitems.xml
+++ b/bharat_ddn/views/menuitems.xml
@@ -20,6 +20,7 @@
             <menuitem id="mobile_otp_menu_item" name="OTP" action="mobile_otp_action" sequence="9"/>
             <menuitem id="ddn_menu_property_import" name="Import Properties" action="action_property_import_wizard" sequence="10"/>
             <menuitem id="ddn_menu_property_id_data" name="Imported Property Data" action="action_property_id_data" sequence="11"/>
-        </menuitem>
+            <menuitem id="menu_property_import_wizard" name="Import Property Wizard" sequence="12" action="action_property_import_wizard"/>
+            </menuitem>
     </menuitem>
 </odoo>
