--- a/bharat_ddn/wizard/ddn_report.xml
+++ b/bharat_ddn/wizard/ddn_report.xml
@@ -1,14 +1,18 @@
 <odoo>
-    <report
-        id="action_report_property_survey_xlsx"
-        model="ddn.report"
-        string="Survey XLSX"
-        report_type="xlsx"
-        name="bharat_ddn.report_property_survey_xlsx"
-        file="property_survey"
-        print_report_name="'Survey_Report'"
-    />
+    <data>
+        <record id="action_report_property_survey_xlsx" model="ir.actions.report">
+    <field name="name">Survey XLSX</field>
+    <field name="model">ddn.report</field>
+    <field name="report_type">xlsx</field>
+    <field name="report_name">bharat_ddn.report_property_survey_xlsx</field>
+    <field name="report_file">property_survey</field>
+    <field name="binding_model_id" ref="model_ddn_report"/>
+    <field name="binding_type">report</field>
+    <field name="print_report_name">'Survey_Report'</field>
+    <field name="attachment_use" eval="False"/>
+</record>
 
+    </data>
 
 
     <record id="view_ddn_report_wizard" model="ir.ui.view">
@@ -20,8 +24,8 @@
                     <field name="date_from"/>
                     <field name="date_to"/>
                     <field name="company_id" readonly="1" invisible="1"/>
-                    <field name="zone_id" domain="[('company_id','=',company_id)]"/>
-                    <field name="ward_id" domain="[('zone_id','=',zone_id),('company_id','=',company_id)]"/>
+                    <field name="zone_id" domain="[('company_id','=',company_id)]" widget="many2many_tags" options="{'no_create_edit':True, 'no_create':True, 'no_open':True}"/>
+                    <field name="ward_id" domain="[('zone_id','=',zone_id),('company_id','=',company_id)]"  widget="many2many_tags"  options="{'no_create_edit':True, 'no_create':True, 'no_open':True}"/>
                 </group>
                 <footer>
                     <button string="Generate" type="object" name="print_xlsx_report" class="btn-primary"/>
